--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  display: block;
+  background-color: #92AAC2;
+  padding-bottom: 10px;
+}
+
+.navLinks {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  background-color: #f5f5f5;
+  margin-top: 10px;
+  padding: 10px;
+  border: 2px solid #ccc;
+  font-family: 'Roboto';
+}
+
+.navLinks a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  padding: 10px 20px;
+}
+
+.navLinks a:hover {
+  color: #007BFF;
+}
+
+.textContainer {
+  max-width: 80vw;
+  margin: 15px auto;
+  padding: 50px;
+  background-color: #f0f0f0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  border: 2px solid #ccc;
+  margin-bottom: 30px;
+}
+
+.textContainer h1 {
+  font-size: 32px;
+  margin-bottom: 20px;
+  color: black;
+  text-align: center;
+  /* Dark blue for headings */
+}
+
+.textContainer p {
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: black;
+  /* Darker blue for paragraph text */
+}
+
+.textContainerQuote {
+  padding-left: 75px;
+  padding-right: 75px;
+  text-align: center;
+  font-style: italic;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.textContainerQuoteBold {
+  padding-left: 75px;
+  padding-right: 75px;
+  text-align: center;
+  font-style: bold;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
 .title a {
