--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,6 +15,7 @@
   padding: 10px;
   border: 2px solid #ccc;
   font-family: 'Roboto';
+  overflow: scroll;
 }
 
 .navLinks a {
@@ -41,19 +42,46 @@
   margin-bottom: 30px;
 }
 
+.containerImage {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  justify-content: center;
+  margin: 20px auto;
+  border-radius: 8px;
+}
+
 .textContainer h1 {
   font-size: 32px;
   margin-bottom: 20px;
   color: black;
   text-align: center;
-  /* Dark blue for headings */
 }
 
 .textContainer p {
   font-size: 18px;
   margin-bottom: 20px;
   color: black;
-  /* Darker blue for paragraph text */
+}
+
+.textContainer p {
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: black;
+}
+
+.bold {
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: black;
+  font-weight: bold;
+}
+
+.paddingLeft {
+  font-size: 18px;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  color: black;
 }
 
 .textContainerQuote {
@@ -67,12 +95,19 @@
 }
 
 .textContainerQuoteBold {
-  padding-left: 75px;
-  padding-right: 75px;
   text-align: center;
-  font-style: bold;
+  padding-left: 350px;
+  font-weight: bold;
   color: black;
-  font-size: 18px;
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.textContainerQuoteBoldRight {
+  text-align: right;
+  font-weight: bold;
+  color: black;
+  font-size: 22px;
   margin-bottom: 20px;
 }
 
@@ -194,6 +229,36 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   transition: border-color 0.2s ease;
+}
+
+.documentGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 20px 0;
+}
+
+@media (max-width: 768px) {
+  .documentGrid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Small screens: 1 column */
+@media (max-width: 480px) {
+  .documentGrid {
+    grid-template-columns: 1fr;
+  }
+}
+
+.documentGrid a:hover {
+  color: #004080;
+}
+
+.documentGrid a {
+  color: #557A95;
+  margin-left: 20px;
+  text-decoration: none;
 }
 
 .formInput:focus {
