--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,8 +3,13 @@
 .container {
   min-height: 100vh;
   display: block;
-  background-color: #92AAC2;
+  background-image: url('/assets/images/americanFlag.jpeg');
   padding-bottom: 10px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 255, 255, 0.80);
+  background-blend-mode: overlay;
 }
 
 .navLinks {
@@ -13,7 +18,6 @@
   background-color: #f5f5f5;
   margin-top: 10px;
   padding: 10px;
-  border: 2px solid #ccc;
   font-family: 'Roboto';
   overflow: scroll;
 }
@@ -30,23 +34,56 @@
   color: #000;
   font-weight: bold;
   padding: 10px 20px;
+  color: #6A7BB1
+}
+
+.headerTitle {
+  background-color: #3a5f92;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 0px 8px 8px 0px;
+  text-align: left;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 80%;
+  width: fit-content;
+  font-size: 32px;
+}
+
+.profileAndText {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .navLinks a:hover {
   color: #007BFF;
 }
 
+.contentWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.leftSection {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 .textContainer {
-  max-width: 80vw;
+  width: 80vw;
   margin: 15px auto;
-  padding: 50px;
-  background-color: #f0f0f0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 0 50px 50px 50px;
   border-radius: 12px;
   font-family: 'Roboto', sans-serif;
   line-height: 1.6;
-  border: 2px solid #ccc;
   margin-bottom: 30px;
+  flex: 1;
 }
 
 .containerImage {
@@ -58,21 +95,22 @@
   border-radius: 8px;
 }
 
+.containerImageYoungPhil {
+  justify-content: center;
+  width: 200px;
+  height: 250px;
+  flex-shrink: 0;
+}
+
 .textContainer h1 {
   font-size: 32px;
   margin-bottom: 20px;
-  color: black;
+  color: #3a5f92;
   text-align: center;
 }
 
 .textContainer p {
-  font-size: 18px;
-  margin-bottom: 20px;
-  color: black;
-}
-
-.textContainer p {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 20px;
   color: black;
 }
@@ -217,10 +255,26 @@
   height: 100vh;
 }
 
+@media (max-width: 768px) {
+  .formContainer {
+    width: 90%;
+    padding: 20px;
+    height: 25vh;
+  }
+}
+
+@media (max-width: 768px) {
+  .styledForm {
+    padding: 40px;
+    border-radius: 10px;
+    width: 400px;
+    margin: 0 auto;
+  }
+}
+
 .styledForm {
   padding: 40px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 400px;
   max-width: 100%;
 }
@@ -267,11 +321,11 @@
 }
 
 .documentGrid a:hover {
-  color: #004080;
+  color: hsl(216, 73%, 67%);
 }
 
 .documentGrid a {
-  color: #557A95;
+  color: #3B506F;
   margin-left: 20px;
   text-decoration: none;
 }
@@ -306,9 +360,36 @@
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
   transition: border-color 0.2s ease;
   height: 150px;
   resize: vertical;
+}
+
+.containerForForm {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 40px;
+}
+
+@media (max-width: 768px) {
+  .containerForForm {
+    grid-template-columns: 1fr;
+  }
+}
+
+.formText {
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  color: #3a5f92;
+}
+
+.hello {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: black;
 }
 
 .submitButton:hover {
