--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,13 +10,13 @@
   background-repeat: no-repeat;
   background-color: rgba(255, 255, 255, 0.80);
   background-blend-mode: overlay;
+  overflow: hidden;
 }
 
 .navLinks {
   display: flex;
   justify-content: space-around;
   background-color: #f5f5f5;
-  margin-top: 10px;
   padding: 10px;
   font-family: 'Roboto';
   overflow: scroll;
@@ -257,9 +257,11 @@
 
 @media (max-width: 768px) {
   .formContainer {
-    width: 90%;
-    padding: 20px;
+    width: 50%;
     height: 25vh;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
   }
 }
 
@@ -371,11 +373,13 @@
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   padding: 40px;
+  max-width: fit-content;
 }
 
 @media (max-width: 768px) {
   .containerForForm {
     grid-template-columns: 1fr;
+    max-width: fit-content;
   }
 }
 
@@ -384,12 +388,16 @@
   align-items: center;
   font-size: 32px;
   color: #3a5f92;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .hello {
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 20px;
   color: black;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .submitButton:hover {
