Last last changes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -115,6 +115,13 @@
   color: black;
 }
 
+.centerText {
+  color: grey;
+  text-align: center;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
 .bold {
   font-size: 18px;
   margin-bottom: 20px;
